@@ -1,6 +1,11 @@
 Camlp5 Version 6.02.3:
 ----------------------
 
+* [16 Mar 11] Fixed bug: incorrect compilation of label patterns of the
+  form ~a:b (or ~{a = b} in revised syntax) in class declarations.
+* [16 Mar 11] Fixed bug: error while printing label patterns ~a:b with
+  pr_o.cmo (error message "labels not pretty printed (in patt)").
+
 Camlp5 Version 6.02.2:
 ----------------------
 
